--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <!-- New footer -->
   <footer class="footer">
     <small>
-      <a href="http://codecamp.io">程式開發工作營</a>
+      <a href="https://github.com/lwkung/first_app">github FirstApp</a>
     </small>
     </footer>
   <!-- Debugging footer -->
